# AI-WORLD

./: .env.example  .gitignore  README.md  pyproject.toml  roadmap.md
app/: main.py
app/api/v1/: __init__.py  chat.py  providers.py  tools.py
app/core/: config.py
app/database/: base.py  reset_db.py
app/models/: models.py
app/schemas/: schemas.py
app/services/: anthropic_service.py  base.py  factory.py  openai_service.py  perplexity_service.py
app/tools/: __init__.py  base.py  calculator.py  registry.py
tests/: conftest.py  test_anthropic.py  test_api.py  test_perplexity.py  test_services.py
